# sol-rpc-canister-ninja

./: Cargo.toml  README.md  basic_solana.did  dfx.json  provision.sh
src/: lib.rs  main.rs  state.rs
